--- a/README
+++ b/README
@@ -1,4 +1,16 @@
 Welcome
 =======
 
-TypeNinja is the typing training program written in JavaScript
+Typing Ninja is a falling letters like game and typing skills training machine
+implemented in JavaScript and RightJS
+
+Live Demo
+=========
+
+You are pretty much free to come and play with the thing in here
+
+http://stcamp.net/games/t-ninja
+
+
+--
+Copyright (C) Nikolay V. Nemshilov aka St.
